--- a/app/src/main/res/layout/fragment_main_feed_page.xml
+++ b/app/src/main/res/layout/fragment_main_feed_page.xml
@@ -1,7 +1,6 @@
 <?xml version="1.0" encoding="utf-8"?>
-<RelativeLayout
+<FrameLayout
     xmlns:android="http://schemas.android.com/apk/res/android"
-    xmlns:tools="http://schemas.android.com/tools"
     android:id="@+id/main_feed_page"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
@@ -14,4 +13,4 @@
         android:layout_alignParentTop="true"
         android:layout_alignParentStart="true"
         android:id="@+id/feed"/>
-</RelativeLayout>
+</FrameLayout>
