--- a/app/src/main/res/menu/nav_items.xml
+++ b/app/src/main/res/menu/nav_items.xml
@@ -7,7 +7,7 @@
         android:icon="@drawable/baseline_home_black_24dp"
         android:title="home" />
     <item
-        android:id="@+id/searchBarItem"
+        android:id="@+id/navSearch"
         android:icon="@drawable/baseline_person_add_black_24dp"
         android:title="search" />
     <item
