--- a/app/src/main/res/layout/post_adapter.xml
+++ b/app/src/main/res/layout/post_adapter.xml
@@ -8,11 +8,10 @@
     android:weightSum="100">
 
 
-    <ImageView
+    <de.hdodenhof.circleimageview.CircleImageView
         android:id="@+id/profilePic"
-        android:layout_width="74dp"
+        android:layout_width="60dp"
         android:layout_height="60dp"
-        android:layout_weight="9"
         android:gravity="center"
         android:text="TextView1"
         android:textAlignment="center"
@@ -28,19 +27,22 @@
 
     <Button
         android:id="@+id/playButton"
-        android:layout_width="40dp"
+        android:layout_width="64dp"
         android:layout_height="40dp"
         android:drawableBottom="@android:drawable/ic_media_play"
         android:text="play" />
+
     <LinearLayout
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:orientation="horizontal">
+
         <Button
             android:id="@+id/hypeButton"
             android:layout_width="50dp"
             android:layout_height="40dp"
-            android:text="hype"/>
+            android:text="hype" />
+
         <TextView
             android:id="@+id/hypeCount"
             android:layout_width="match_parent"
