--- a/app/src/main/res/layout/register_page.xml
+++ b/app/src/main/res/layout/register_page.xml
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="utf-8"?>
-<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
+<AbsoluteLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
@@ -8,47 +8,67 @@
     tools:layout_editor_absoluteY="81dp"
     tools:layout_editor_absoluteX="0dp">
 
+    <Button
+        android:id="@+id/registerButton"
+        android:layout_width="wrap_content"
+        android:layout_height="wrap_content"
+        android:layout_marginBottom="133dp"
+        android:layout_marginStart="108dp"
+        android:layout_x="143dp"
+        android:layout_y="242dp"
+        android:text="Register"
+        app:layout_constraintBottom_toBottomOf="parent"
+        app:layout_constraintLeft_toLeftOf="parent"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1" />
+
     <EditText
         android:id="@+id/userName"
-        android:layout_width="215dp"
+        android:layout_width="match_parent"
         android:layout_height="42dp"
+        android:layout_marginBottom="17dp"
+        android:layout_marginLeft="16dp"
         android:layout_marginStart="16dp"
+        android:layout_marginTop="29dp"
+        android:layout_x="1dp"
+        android:layout_y="169dp"
         android:ems="10"
         android:hint="user name"
         android:inputType="textPersonName"
         android:visibility="visible"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintBottom_creator="1"
         app:layout_constraintBottom_toTopOf="@+id/email"
-        android:layout_marginTop="29dp"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="17dp"
         app:layout_constraintLeft_toLeftOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        android:layout_marginLeft="16dp"
-        app:layout_constraintVertical_bias="0.0" />
+        app:layout_constraintVertical_bias="0.0"
+        tools:layout_constraintBottom_creator="1"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/email"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
+        android:layout_marginStart="16dp"
+        android:layout_marginTop="89dp"
+        android:layout_x="3dp"
+        android:layout_y="22dp"
+
         android:ems="10"
         android:hint="E-mail"
         android:inputType="textPersonName"
         android:visibility="visible"
-
-        tools:layout_constraintTop_creator="1"
-        android:layout_marginStart="16dp"
-        android:layout_marginTop="89dp"
-        tools:layout_constraintLeft_creator="1"
         app:layout_constraintLeft_toLeftOf="parent"
-        app:layout_constraintTop_toTopOf="parent" />
+        app:layout_constraintTop_toTopOf="parent"
+        tools:layout_constraintLeft_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <EditText
         android:id="@+id/password"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
         android:layout_marginTop="21dp"
+        android:layout_x="2dp"
+        android:layout_y="71dp"
         android:ems="10"
         android:hint="password"
         android:inputType="textPassword"
@@ -62,45 +82,37 @@
 
     <EditText
         android:id="@+id/confirmPassword"
-        android:layout_width="0dp"
+        android:layout_width="match_parent"
         android:layout_height="38dp"
-        android:ems="10"
-        android:inputType="textPassword"
-        android:hint="confirm password"
-        android:visibility="visible"
-        tools:layout_constraintTop_creator="1"
-        tools:layout_constraintRight_creator="1"
-        app:layout_constraintRight_toRightOf="@+id/password"
         android:layout_marginTop="22dp"
+        android:layout_x="3dp"
+        android:layout_y="117dp"
+        android:ems="10"
+        android:hint="confirm password"
+        android:inputType="textPassword"
+        android:visibility="visible"
+        app:layout_constraintHorizontal_bias="0.0"
+        app:layout_constraintLeft_toLeftOf="@+id/password"
+        app:layout_constraintRight_toRightOf="@+id/password"
         app:layout_constraintTop_toBottomOf="@+id/password"
         tools:layout_constraintLeft_creator="1"
-        app:layout_constraintLeft_toLeftOf="@+id/password"
-        app:layout_constraintHorizontal_bias="0.0" />
-
-    <Button
-        android:id="@+id/registerButton"
-        android:layout_width="wrap_content"
-        android:layout_height="wrap_content"
-        android:text="Register"
-        tools:layout_constraintBottom_creator="1"
-        android:layout_marginStart="108dp"
-        app:layout_constraintBottom_toBottomOf="parent"
-        tools:layout_constraintLeft_creator="1"
-        android:layout_marginBottom="133dp"
-        app:layout_constraintLeft_toLeftOf="parent" />
+        tools:layout_constraintRight_creator="1"
+        tools:layout_constraintTop_creator="1" />
 
     <TextView
         android:id="@+id/emailError"
         android:layout_width="128dp"
         android:layout_height="40dp"
         android:layout_marginLeft="28dp"
+        android:layout_marginStart="28dp"
+        android:layout_x="241dp"
+        android:layout_y="9dp"
         android:text="Email is not valid"
         android:textColor="@android:color/holo_red_dark"
         android:textSize="16sp"
         android:visibility="invisible"
-        app:layout_constraintLeft_toRightOf="@+id/email"
-        android:layout_marginStart="28dp"
         app:layout_constraintBaseline_toBaselineOf="@+id/email"
+        app:layout_constraintLeft_toRightOf="@+id/email"
         tools:layout_constraintBaseline_creator="1" />
 
-</android.support.constraint.ConstraintLayout>
+</AbsoluteLayout>
